--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Prepare
         id: prepare
         run: |
-          DOCKER_IMAGE=timbru31/node-alpine-git
+          DOCKER_IMAGE=ghcr.io/${{ github.repository }}
 
           TEMP="${{ matrix.docker-file.tags }}"
           TAGZ=($TEMP)
@@ -74,12 +74,13 @@ jobs:
           platforms: ${{ matrix.docker-file.platforms }}
           tags: ${{ steps.prepare.outputs.tags }}
 
-      - name: Docker Login
+      - name: Docker Login to GHCR
         if: success() && contains(github.ref, 'master')
         uses: docker/login-action@v3.3.0
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Buildx (push)
         uses: docker/build-push-action@v6.9.0
