--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -74,7 +74,7 @@ jobs:
           platforms: ${{ matrix.docker-file.platforms }}
           tags: ${{ steps.prepare.outputs.tags }}
 
-      - name: Docker Login to GHCR
+      - name: Docker Login to GHCR.io
         if: success() && contains(github.ref, 'master')
         uses: docker/login-action@v3.3.0
         with:
