--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -24,6 +24,9 @@ jobs:
           - path: 22
             tags: "22 jod"
             platforms: linux/amd64,linux/arm64,linux/s390x,linux/arm/v7,linux/arm/v6
+          - path: slim
+            tags: "slim"
+            platforms: linux/amd64,linux/arm64
 
     steps:
       - name: Checkout
